# FaCT

./: .gitignore  LICENSE  README.md  analysis.sh  requirements.txt  train.sh
C2Score-minimal/: README.md  c2_score_minimal.py  dummy_name-scores.pt
C2Score-minimal/dummy_dir/concept_1_bad/: id_22324_actmap.pt  id_27736_actmap.pt  id_6158_actmap.pt
C2Score-minimal/dummy_dir/concept_2_good/: id_12933_actmap.pt  id_23597_actmap.pt  id_48639_actmap.pt
fact/: pyproject.toml
fact/analysis/: analysis.py  dino_consistency.py
fact/fact.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
fact/plotting/: plot_inference.py
fact/training/: saes.py  train.py
fact/utils/: __init__.py  bcos_modules.py  imagenet_classnames.py  tools.py  utils.py
